package com.tunepruner.fourwards.gui.newgui.cell;

public class CellDesign {
    int width;
    int height;
    int padding;
    public void createDesign(){}
}
