@startuml
class Cells{
int listAreaTopLeft;
int listAreaWidth;
int listAreaHeight;
CellList
Point anchor
displayAllCells()
}
class Cell{
CellMouseBehavior
CellPlacement
CellDesign
CellAnimationBehavior
displayCell()
update()
}
class CellAnimationBehavior{
CellPlacement
animateIn();
animateOut();
animateTo();
handleDrag();
}
class CellMouseBehavior{
CellList
CellDesign
CellPlacement
setOnMouseOver();
setOnMouseClicked();
setOnMousePressed();
setOnMouseDragged();
setOnMouseReleased()
}
class CellPlacement{
CellList
Point placement
getPosition()
setPosition()
}
class CellDesign{
int width
int height
int padding
createDesign()
}
class CellList<T extends Cell>{
List<T> cells;
moveTo()
indexOf()
contains()
remove()
add()
}

Cells *- CellList
Cell *-- CellDesign
Cell *- CellAnimationBehavior
Cell *-- CellPlacement
Cell *-- CellMouseBehavior
CellList *-- Cell

@enduml